# recommend-psychology-books-chatbot

./: Dockerfile  README.md  build_index.py  chainlit.md  main.py  pyproject.toml  tool_book_recommender_async.py
db/books.lance/_transactions/: 0-f01ee37a-b347-4443-b358-7c73124d7406.txn
db/books.lance/_versions/: 1.manifest
